syntax = "proto3";
option java_multiple_files = true;
package inventory.control.grpc.generated;

message AddInventoryItemRequest {
  string itemCode = 1;
  string itemName = 2;
  double quantity = 3;
  bool isSentByPrimary = 4;
}

message AddInventoryItemResponse {
  bool status = 1;
}

service AddInventoryItemService {
  rpc addInventoryItem(AddInventoryItemRequest) returns (AddInventoryItemResponse);
}

message GetInventoryItemRequest {
  string itemCode = 1;
}

message GetInventoryItemResponse {
  string itemName = 1;
  double quantity = 2;
}

service GetInventoryItemService {
  rpc getInventoryItem(GetInventoryItemRequest) returns (GetInventoryItemResponse);
}

message ViewInventoryStorageRequest {}

message ViewInventoryStorageResponse {
  map<string, double> items = 1;
}

service ViewInventoryStorageService {
  rpc viewInventoryStorage(ViewInventoryStorageRequest) returns (ViewInventoryStorageResponse);
}

message ReserveInventoryItemRequest {
  string itemCode = 1;
  double quantity = 2;
  bool isSentByPrimary = 3;
}

message ReserveInventoryItemResponse {
  bool status = 1;
  string message = 2;
}

service ReserveInventoryItemService {
  rpc reserveInventoryItem(ReserveInventoryItemRequest) returns (ReserveInventoryItemResponse);
}

message GetInventoryStorageItemsRequest {}

message InventoryItem {
  string itemName = 1;
  double itemQuantity = 2;
}

message GetInventoryStorageItemsResponse {
  map<string, InventoryItem> inventoryItems = 1;
}

service GetInventoryStorageItemsService {
  rpc getInventoryStorageItems(GetInventoryStorageItemsRequest) returns (GetInventoryStorageItemsResponse);
}